--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^6.1.0",
+    "recharts": "^1.8.5",
     "redux": "^4.0.5",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.1"
